--- a/static/drug/drug.html
+++ b/static/drug/drug.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>통합 의약 정보 검색</h1>
-    <button onclick="window.open('druginfo.html')">의약품 정보 검색</button>
-    <button onclick="window.open('dosageinfo.html')">1일 의약품 최대투여량 정보 검색</button>
-    <button onclick="window.open('vaccineinfo.html')">감염병 백신 의약품 정보 검색</button>
-    <button onclick="window.open('raredrug.html')">희귀 의약품 정보 검색</button>
-    <button onclick="window.open('essential.html')">안전 상비 의약품 목록</button>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('druginfo.html')">의약품 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('dosageinfo.html')">1일 의약품 최대투여량 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('vaccineinfo.html')">감염병 백신 의약품 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('raredrug.html')">희귀 의약품 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('essential.html')">안전 상비 의약품 목록</button><br><br>
 </body>
 </html> 
