--- a/static/drug/vaccineinfo.html
+++ b/static/drug/vaccineinfo.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>감염병 백신 의약품 정보 조회</h1>
+    <p><b>해당 검색 탭에 "백신 제품명"을 검색하면 품목기준코드, 업체명, 허가일자가 출력됩니다.</b><div class="ex"></div>
+        검색 예시: 스카이조스터주(대상포진생바이러스백신)</p>
     <form id="VaccinInfo">
         <input type="text" id="PRDLST_NM" name="PRDLST_NM" placeholder="제품명 입력">
         <button type="button" onclick="fetchVaccineInfo()">정보 조회</button>
