--- a/static/drug/dosageinfo.html
+++ b/static/drug/dosageinfo.html
@@ -2,10 +2,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>성분별 1일 최대투여량 정보</title>
+    <title>성분별 1일 최대 투여량 정보</title>
 </head>
 <body>
-    <h1>성분별 1일 최대투여량 정보 조회</h1>
+    <h1>성분별 1일 최대 투여량 정보 조회</h1>
+    <p><b>해당 검색 탭에 "의약 성분"을 검색하면 성분코드, 제형코드, 제형명, 투여경로, 1일 최대 투여량 정보가 출력됩니다.</b><div class="ex"></div>
+    검색 예시: 정제수/항파상풍사람면역글로불린</p>
     <form id="DrugInfo">
         <input type="text" id="DRUG_CPNT_KOR_NM" name="DRUG_CPNT_KOR_NM" placeholder="제품명 입력">
         <button type="button" onclick="fetchDosageInfo()">정보 조회</button>
@@ -36,8 +38,7 @@
                             <p><strong>제형코드:</strong> ${item.FOML_CD}</p>
                             <p><strong>제형명:</strong> ${item.FOML_NM}</p>
                             <p><strong>투여경로:</strong> ${item.DOSAGE_ROUTE_CODE}</p>
-                            <p><strong>투여단위:</strong> ${item.DAY_MAX_DOSG_QY_UNIT}</p>
-                            <p><strong>1일 최대투여량:</strong> ${item.DAY_MAX_DOSG_QY}</p>
+                            <p><strong>1일 최대 투여량:</strong> ${item.DAY_MAX_DOSG_QY}</p>
                             <hr>
                         </div>
                     `; 
