--- a/static/drug/essential.html
+++ b/static/drug/essential.html
@@ -2,45 +2,43 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>안전 상비 의약 정보</title>
+    <title>상비 의약품 목록</title>
 </head>
 <body>
-    <h1>안전 상비 의약 정보</h1>
-    <div id="essential-info"></div>
+    <h1>상비 의약품 목록</h1>
+    <form id="Essential">
+        <button type="button" onclick="fetchEssential()">정보 조회</button></p>
+    </form>
+    <div id="results"></div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            fetchEssentialInfo();
-        });
-
-        async function fetchEssentialInfo() {
+        async function fetchEssential() {
             const response = await fetch('/essential', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({ page_no: 1, num_of_rows: 3, type: 'json' })  // 필요한 값을 입력
             });
+            
             const data = await response.json();
-            displayEssentialInfo(data);
-        }
-
-        function displayEssentialInfo(data) {
-            const essentialInfoDiv = document.getElementById('essential-info');
-            essentialInfoDiv.innerHTML = ''; // 이전 데이터를 초기화
-
-            // 실제 API 응답 구조에 맞춰 데이터 표시
-            if (data.response && data.response.body && data.response.body.items) {
-                const items = data.response.body.items;
-                items.forEach(item => {
-                    const itemDiv = document.createElement('div');
-                    itemDiv.textContent = `제품명: ${item.PRDLST_NM}, 제조사: ${item.BSSH_NM}, 유효기간: ${item.VLD_PRD_YMD}, 보관 방법: ${item.STRG_MTH_CONT}`;
-                    essentialInfoDiv.appendChild(itemDiv);
+            let resultHtml = '';
+            if (data.length > 0) { 
+                data.forEach(item => {
+                    resultHtml += `
+                        <div style="margin-bottom: 20px;">
+                            <p><strong>제품명:</strong> ${item.PRDLST_NM}</p>
+                            <p><strong>업체명:</strong> ${item.BSSH_NM}</p>
+                            <p><strong>유효기간:</strong> ${item.VLD_PRD_YMD}</p>
+                            <p><strong>저장방법:</strong> ${item.STRG_MTH_CONT}</p>
+                            <hr>
+                        </div>
+                    `;
                 });
             } else {
-                essentialInfoDiv.textContent = '데이터가 없습니다.';
+                resultHtml = '<p>정보를 찾을 수 없습니다.</p>';
             }
-        }
+            document.getElementById('results').innerHTML = resultHtml;  // 결과 HTML을 페이지에 삽입
+        } 
     </script>
 </body>
 </html>
