--- a/static/drug/dosageinfo.html
+++ b/static/drug/dosageinfo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>성분별 1일 최대 투여량 정보 조회</h1>
-    <p><b>해당 검색 탭에 "의약 성분"을 검색하면 성분코드, 제형코드, 제형명, 투여경로, 1일 최대 투여량 정보가 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "성분"을 검색하면 성분코드, 제형코드, 제형명, 투여경로, 1일 최대 투여량 정보가 출력됩니다.</b><div class="ex"></div>
     검색 예시: 정제수/항파상풍사람면역글로불린</p>
     <form id="DrugInfo">
         <input type="text" id="DRUG_CPNT_KOR_NM" name="DRUG_CPNT_KOR_NM" placeholder="제품명 입력">
