--- a/static/drug/druginfo.html
+++ b/static/drug/druginfo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>의약품 정보 조회</h1>
-    <p><b>해당 검색 탭에 "의약 제품명"을 검색하면 업체명, 제품명, 품목기준코드, 효능, 사용법, 사용전 주의사항, 사용중 주의사항, 주의해야 할 약/음식, 부작용, 보관법, 낱알 이미지가 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "제품명"을 검색하면 업체명, 제품명, 품목기준코드, 효능, 사용법, 사용 전 주의 사항, 사용 중 주의 사항, 주의해야 할 약/음식, 부작용, 보관법, 낱알 이미지가 출력됩니다.</b><div class="ex"></div>
     검색 예시: 아스피린/활명수</p>
     <form id="DrugInfo">
         <input type="text" id="itemName" name="itemName" placeholder="제품명 입력">
