--- a/static/drug/raredrug.html
+++ b/static/drug/raredrug.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>희귀 의약품 정보 조회</h1>
-    <p><b>해당 검색 탭에 "희귀 의약품 제품명"을 검색하면 희귀의약품지정번호, 제조소명, 대상질환, 제제명이 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "제품명"을 검색하면 희귀의약품지정번호, 제조소명, 대상질환, 제제명이 출력됩니다.</b><div class="ex"></div>
         검색 예시: 동종 배아줄기세포유래 망막색소상피세포</p>
     <form id="RareDrug">
         <input type="text" id="goods_name" name="goods_name" placeholder="제품명을 입력하세요.">
